# oikotool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/oikotool/: cli.py  core.py  exceptions.py  formatters.py  translations.py  utils.py
tests/: mocks.py  test_console_output.py  test_listing_formatters.py  test_prepare_api_url.py  test_prepare_images_url.py  test_seen_listings.py  test_session_headers.py  test_slack_output.py
