[tool.poetry]
name = "oikotool"
version = "1.0.0"
description = "Command-line tool to automate property searches on Oikotie.fi"
authors = ["Janne K <hi@jakan0.dev>"]
license = "MIT"
readme = "README.md"

packages = [{ include = "oikotool", from = "src" }]
include = [{ path = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.2"
pytest = "^8.3.2"
types-requests = "^2.32.0.20240712"
types-beautifulsoup4 = "^4.12.0.20240511"

[tool.poetry.scripts]
oikotool = "oikotool.cli:main"

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["oikotool"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
